--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "jmtab",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": false,
+  "main": "dist/index.js",
+  "browser" : "./browser/specfic/main.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "rm -rf dist && mkdir dist && tsc"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "keywords" : ["react", "typescript"],
+  "repository": {
+    "type" : "git",
+    "url" : "git://github.com/JeongMiiiin/JMTab"
   }
 }
